--- a/src/webcomponents/test-results.html
+++ b/src/webcomponents/test-results.html
@@ -9,9 +9,8 @@ This component (<test-results>) describes the suite editor view.
       height: 2em;
     }
 
-    .small-display {
-      max-height: 60px;
-      overflow-y: hidden;
+    .hide {
+      display: none;
     }
 
     button.shown::before {
@@ -20,6 +19,10 @@ This component (<test-results>) describes the suite editor view.
 
     button.hidden::before {
       content: "Show";
+    }
+
+    button.add-suite {
+      display: block;
     }
   </style>
   <div class="test-results">
@@ -56,18 +59,37 @@ This component (<test-results>) describes the suite editor view.
 
       // TODO: would love to move this to hotel at some point
       var buildSuiteElement = function (newSuite) {
-        var testSuite = document.createElement('test-suite');
+        var _testSuite = document.createElement('test-suite');
 
-        testSuite.setAttribute('name', newSuite.name);
-        testSuite.setAttribute('suite-passed', false);
-        testSuite.code = newSuite.code;  // to avoid leaving the code as an easy-to-spot attribute
+        _testSuite.setAttribute('name', newSuite.name);
+        _testSuite.setAttribute('suite-passed', false);
+        _testSuite.code = newSuite.code;  // to avoid leaving the code as an easy-to-spot attribute
 
-        testSuites.appendChild(testSuite);
+        _testSuite.suite = newSuite;
 
-        return testSuite;
+        _testSuite.createTest = function (_test) {
+          // TODO: actually collect this from the DOM
+          newSuite.createTest({
+            description: _test.description,
+            activeTest: _test.activeTest,
+            flags: _test.flags || []
+          })
+        }
+
+        testSuites.appendChild(_testSuite);
+
+        return _testSuite;
       }
-
       exports.buildSuiteElement = buildSuiteElement;
+
+      var testResults = this.shadowRoot.querySelector('.test-results');
+      var toggleDisplayElem = testResults.querySelector('.toggle_display');
+      
+      toggleDisplayElem.onclick = function() {
+        testResults.querySelector('.test-suites').classList.toggle('hide');
+        testResults.querySelector('.toggle_display').classList.toggle('hidden');
+        testResults.querySelector('.toggle_display').classList.toggle('shown');
+      }
     };
 
     document.registerElement('test-results', {prototype: proto});
