--- a/src/webcomponents/test-widget.html
+++ b/src/webcomponents/test-widget.html
@@ -17,8 +17,8 @@ when all suites pass.
     }
 
     .test-widget-display {
-      position: absolute;
-      min-width: 200px;
+      position: fixed;
+      width: 325px;
       background-color: rgba(230, 230, 230, 0.9);
       opacity: 0.5;
       right: 0px;
@@ -26,7 +26,7 @@ when all suites pass.
       padding: 0.5em;
       text-align: left;
       max-height: 100%;
-      overflow-y: scroll;
+      overflow-y: hidden;
       transition: opacity 0.3s, max-height 0.3s;;
     }
 
@@ -96,11 +96,6 @@ when all suites pass.
       viewContainer.appendChild(suiteEditorElem);
       viewContainer.appendChild(testEditorElem);
 
-      // TODO: so janky. do this better.
-      window.onscroll = function() {
-        testWidgetDisplay.style.top = window.scrollY + "px";
-      };
-
       window.onload = function() {
         testWidgetDisplay.style.top = window.scrollY + "px";
       };
@@ -120,8 +115,8 @@ when all suites pass.
       };
       exports.editSuite = editSuite;
 
-      function editTest (test) {
-        testEditor.setTest(test);
+      function editTest () {
+        // testEditor.setTest(test);
 
         testResultsElem.style.display = 'none';
         suiteEditorElem.style.display = 'none';
