starting to get script injection from browser_action working

--- a/ext/src/browser_action/browser_action.html
+++ b/ext/src/browser_action/browser_action.html
@@ -25,5 +25,10 @@
   <div>
     <h4>Save Current Tests</h4>
   </div>
+  <button id="test">Test!!!</button>
+  <div class="is-testing">testing</div>
+  
+  <output id="list">List</output>
+  <div id="the-file">Contents</div>
 </div>
 <script src="browser_action.js"></script>
