--- a/src/webcomponents/test-widget.html
+++ b/src/webcomponents/test-widget.html
@@ -18,7 +18,7 @@ when all suites pass.
 
     .test-widget-display {
       position: fixed;
-      width: 325px;
+      min-width: 325px;
       background-color: rgba(230, 230, 230, 0.9);
       opacity: 0.5;
       right: 0px;
