--- a/src/webcomponents/active-test.html
+++ b/src/webcomponents/active-test.html
@@ -62,16 +62,10 @@ This component holds a single test.
       justify-content: space-between;
     }
 
-    .edit {
-      transform: scale(-1, 1);
-      cursor: pointer;
-      display: none;
-    }
-
   </style>
   <div class="active-test">
     <div class="flex-container">
-      <div class="mark incorrect"><span class="test-desc"></span><span class="test-result"></span></div><a class="edit" onclick="this.edit()">✎</a>
+      <div class="mark incorrect"><span class="test-desc"></span><span class="test-result"></span></div>
     </div>
   </div>
 </template>
@@ -99,9 +93,6 @@ This component holds a single test.
     */
     proto.attachedCallback = function() {
       self = this;
-      var editButton = this.shadowRoot.querySelector('a.edit');
-      
-      editButton.edit = this.edit;
       updateView();
     };
 
