improve(ActiveTest): runs tests tests totally asynchronously
- TA now runs a series of async methods that run synchronously

--- a/src/webcomponents/active-test.html
+++ b/src/webcomponents/active-test.html
@@ -68,11 +68,18 @@ This component holds a single test.
       <div class="mark incorrect"><span class="test-desc"></span><span class="test-result"></span></div>
     </div>
   </div>
+  <!-- TODO: does the iFrame still run scripts if it is display: noned? -->
+  <iframe style="display: none;" sandbox="allow-scripts">
+    <html>
+      <head>
+        <script id="test-runner"></script>
+      </head>
+    </html>
+  </iframe>
 </template>
 <script>
   (function() {
     'use strict';
-    var exports = {};
     var self = null;
 
     var importDoc = document.currentScript.ownerDocument;
@@ -134,6 +141,5 @@ This component holds a single test.
     };
 
     document.registerElement('active-test', {prototype: proto});
-    return exports;
   })();
 </script>
