saving progress. almost evaling student code safely in a web worker

--- a/ext/src/browser_action/browser_action.html
+++ b/ext/src/browser_action/browser_action.html
@@ -29,7 +29,7 @@
     <h4>Save Current Tests</h4>
   </div>
   <button id="test">Test!!!</button>
-  <div class="is-testing">testing</div>
+  <div class="is-testing">hasn't changed</div>
   
   <output id="list">List</output>
   <div id="the-file">Contents</div>
