GE now pulled from files packaged in the ext

--- a/sample/index.html
+++ b/sample/index.html
@@ -1,5 +1,6 @@
 <head>
   <title>Sample Tests</title>
+  <meta name="udacity-grader" content="test.json">
   <style>
     .box {
       background-color: #fcc;
