--- a/sample/index.html
+++ b/sample/index.html
@@ -53,6 +53,9 @@
       height: 100px;
       width: auto;
     }
+    .box:nth-child(even) {
+      background-color: #cfc;
+    }
   </style>
 <head>
 <body>
@@ -60,9 +63,9 @@
   <img id="udacity" src="udacity.jpg" height="697" width="687" alt="yes or no">
   <div class="box box1 three-quarters">75% width</div>
   <div class="box box2">b</div>
-  <div class="box box3">c</div>
+  <div class="box box3 innerHTML">this is the correct innerHTML</div>
   <div class="box box4">d</div>
-  <div class="box box5" test>e</div>
+  <div class="box box5" test>has test attr</div>
   <div class="box box6">f</div>
   <div class="box box7">g</div>
   <div class="box box8">h</div>
