fixes bugs in TA reporter methods

--- a/sample/index.html
+++ b/sample/index.html
@@ -56,18 +56,23 @@
     .box:nth-child(even) {
       background-color: #cfc;
     }
+    .abs {
+      position: absolute;
+      top: 30px;
+      left: 400px;
+    }
   </style>
 <head>
 <body>
   <h1>Grading Engine Test!</h1>
-  <img id="udacity" src="udacity.jpg" height="697" width="687" alt="yes or no">
+  <img id="udacity" src="udacity.jpg" alt="udacity">
   <div class="box box1 three-quarters">75% width</div>
   <div class="box box2">b</div>
   <div class="box box3 innerHTML">this is the correct innerHTML</div>
   <div class="box box4">d</div>
   <div class="box box5" test>has test attr</div>
   <div class="box box6">f</div>
-  <div class="box box7">g</div>
+  <div class="box box7 abs">looking at this one's abs pos</div>
   <div class="box box8">h</div>
   <div class="box box9">i</div>
   <div class="box box10">j</div>
