add ability to turn on/off from browser action

--- a/ext/src/browser_action/browser_action.html
+++ b/ext/src/browser_action/browser_action.html
@@ -35,7 +35,7 @@
   <div class="autorun">
     <form>
       <label for="allow-feedback">Allow feedback on this site?
-        <input id="allow-feedback" type="checkbox" value="yes" checked disabled>
+        <input id="allow-feedback" type="checkbox" value="yes">
       </label>
     </form>
   </div>
