drastically improves error handling

--- a/ext/src/browser_action/browser_action.html
+++ b/ext/src/browser_action/browser_action.html
@@ -34,7 +34,7 @@
   </div>
   <div class="autorun">
     <form>
-      <label for="allow-feedback">Allow feedback on this site?
+      <label for="allow-feedback">Allow feedback on this domain
         <input id="allow-feedback" type="checkbox" value="yes">
       </label>
     </form>
