--- a/src/webcomponents/active-test.html
+++ b/src/webcomponents/active-test.html
@@ -19,6 +19,12 @@ This component holds a single test.
     .test-desc {
       width: 100%;
     }
+    .error {
+      color: #FCD209;
+    }
+    .error::before {
+      content: "¿? ";
+    }
 
     /* http://www.menucool.com/tooltip/css-tooltip */
     .test-desc {outline:none;}
