add errors to active-test UI

--- a/src/webcomponents/test-widget.html
+++ b/src/webcomponents/test-widget.html
@@ -27,7 +27,8 @@ when all suites pass.
       text-align: left;
       max-height: 100%;
       overflow-y: scroll;
-      transition: opacity 0.3s, max-height 0.3s;;
+      transition: opacity 0.3s, max-height 0.3s;
+      z-index: 99999 !important;
     }
 
 /*    @media screen and (max-width: 800px) {
