--- a/sample/index.html
+++ b/sample/index.html
@@ -1,6 +1,7 @@
 <head>
   <title>Sample Tests</title>
   <meta name="udacity-grader" content="test.json">
+  <meta charset="UTF-8">
   <style>
     body {
       width: 100%;
