updates support for multiple json filetypes and adds new validation on file data

--- a/ext/src/browser_action/browser_action.html
+++ b/ext/src/browser_action/browser_action.html
@@ -27,7 +27,7 @@
     <div class="loader-description">
       Click <a href="https://github.com/udacity/frontend-grading-engine" target="_blank">here</a> to learn how to write your own tests.
     </div>
-    <label for="ud-file-loader"><strong>Load Files</strong>
+    <label for="ud-file-loader"><strong>Load tests from file</strong>
       <input id="ud-file-loader" type="file">
     </label>
     <div class="alert"></div>
