adds better file selection with more noticeable errors

--- a/ext/src/browser_action/browser_action.html
+++ b/ext/src/browser_action/browser_action.html
@@ -25,7 +25,7 @@
       Want to write tests? Here's the <a href="https://github.com/udacity/frontend-grading-engine" target="_blank">API</a>.
     </div>
     <label for="ud-file-loader"><strong>Load tests from file</strong>
-      <input id="ud-file-loader" type="file">
+      <input id="ud-file-loader" type="file" accept=".json">
     </label>
     <div class="alert"></div>
   </div>
