adds JS tests to sample page

--- a/sample/index.html
+++ b/sample/index.html
@@ -1,6 +1,6 @@
 <head>
   <title>Sample Tests</title>
-  <meta name="udacity-grader" content="test.json">
+  <meta name="udacity-grader" content="test.json" libraries="jsgrader" unit-tests="unit-tests.js">
   <meta charset="UTF-8">
   <style>
     body {
