adds new tests for absolute position

--- a/sample/index.html
+++ b/sample/index.html
@@ -60,7 +60,12 @@
     .abs {
       position: absolute;
       top: 30px;
-      left: 400px;
+      left: 0px;
+    }
+    .box4 {
+      position: absolute;
+      left: calc(100% - 8px);
+      /*bottom: 0;*/
     }
   </style>
 <head>
