improves the show/hide test results button with a fancy cursor pointer

--- a/src/webcomponents/test-results.html
+++ b/src/webcomponents/test-results.html
@@ -21,6 +21,8 @@ This component (<test-results>) describes the suite editor view.
       border: 1px solid transparent;
       
       background-color: #777;
+      
+      cursor: pointer;
     }
 
     .toggle-display:hover:not(:disabled) {
