replaces quotes in text to their UTF-8 equivalent
It’s going to be much easier to refactor and is also more elegant.

--- a/ext/app/browser_action/browser_action.html
+++ b/ext/app/browser_action/browser_action.html
@@ -22,7 +22,7 @@
   <h3>Udacity Feedback Settings</h3>
   <div class="loader">
     <div class="loader-description">
-      Want to write tests? Here's the <a href="https://github.com/udacity/frontend-grading-engine" target="_blank">API</a>.
+      Want to write tests? Here’s the <a href="https://github.com/udacity/frontend-grading-engine" target="_blank">API</a>.
     </div>
     <label for="ud-file-loader"><strong>Load tests from file</strong>
       <input id="ud-file-loader" type="file" accept=".json">
