--- a/sample/index.html
+++ b/sample/index.html
@@ -78,11 +78,11 @@
   <div class="box box4">d</div>
   <div class="box box5" test>has test attr</div>
   <div class="box box6">f</div>
-  <div class="box box7 abs">looking at this one's abs pos</div>
+  <div class="box box7 abs">looking at this one’s abs pos</div>
   <div class="box box8">h</div>
   <div class="box box9">i</div>
   <div class="box box10">j</div>
-  <p>Hello, I'm a <code>p</code> tag.</p>
+  <p>Hello, I’m a <code>p</code> tag.</p>
   <div class="flex-container">
     <div class="flex flex1"></div>
     <div class="flex flex2"></div>
