--- a/src/webcomponents/test-widget.html
+++ b/src/webcomponents/test-widget.html
@@ -4,7 +4,7 @@ This component (<test-widget>) describes the grader as a whole.
 It creates suites of tests (<test-suite>) as defined in the
 grader.js file.
 
-Listens for 'suite-passed' events. Emits a 'grader-passed' event
+Listens for “suite-passed” events. Emits a “grader-passed” event
 when all suites pass.
 -->
 
