renames hex colors to lowercase

--- a/ext/app/browser_action/browser_action.html
+++ b/ext/app/browser_action/browser_action.html
@@ -9,7 +9,7 @@
          font-family: Helvetica, Ubuntu, Arial, sans-serif;
      }
      .alert {
-         color: #78F;
+         color: #78f;
          display: none;
      }
      .loader {
