--- a/src/webcomponents/active-test.html
+++ b/src/webcomponents/active-test.html
@@ -38,7 +38,7 @@ This component holds a single test.
       content: "✗ ";
     }
     .error {
-      color: #A48700;
+      color: #a48700;
     }
     .error::before {
       content: "?? ";
