--- a/src/webcomponents/test-suite.html
+++ b/src/webcomponents/test-suite.html
@@ -13,7 +13,7 @@ This component holds a suite of tests.
     }
     .suite-code {
       background: rgba(0,0,0,0.6);
-      color: #EEE;
+      color: #eee;
       margin: 6px -0.5em;
     }
     .suite-code > div {
