adds footer comment for concatenated files
It helps finding finding where files may end when it’s concatenated.

--- a/src/webcomponents/active-test.html
+++ b/src/webcomponents/active-test.html
@@ -133,3 +133,5 @@ This component holds a single test.
     document.registerElement('active-test', {prototype: proto});
   })();
 </script>
+
+<!-- active-test.html ends here -->
