--- a/src/webcomponents/test-results.html
+++ b/src/webcomponents/test-results.html
@@ -128,3 +128,5 @@ This component (<test-results>) describes the suite editor view.
     return exports;
   })();
 </script>
+
+<!-- test-results.html ends here -->
