--- a/src/webcomponents/test-suite.html
+++ b/src/webcomponents/test-suite.html
@@ -91,3 +91,5 @@ This component holds a suite of tests.
     document.registerElement('test-suite', {prototype: proto});
   })();
 </script>
+
+<!-- test-suite.html ends here -->
