changes custom attributes to data-*
Since we will no longer use WebComponents, using standard data attributes is
less confusing.

--- a/src/webcomponents/active-test.html
+++ b/src/webcomponents/active-test.html
@@ -79,7 +79,7 @@ This component holds a single test.
     */
     proto.attachedCallback = function() {
       self = this;
-      self.setAttribute('test-passed', false);
+      self.dataset.testPassed = false;
       updateView();
     };
 
@@ -93,8 +93,8 @@ This component holds a single test.
 
     function updateView() {
       try {
-        var testDescription = self.getAttribute('description');
-        var testPassed = self.getAttribute('test-passed');
+        var testDescription = self.dataset.description;
+        var testPassed = self.dataset.testPassed;
       } catch (e) {
         console.log(e);
       }
