--- a/src/webcomponents/test-suite.html
+++ b/src/webcomponents/test-suite.html
@@ -58,10 +58,10 @@ This component holds a suite of tests.
     };
 
     function updateView() {
-      var suiteName = self.getAttribute('name');
-      var suitePassed = self.getAttribute('suite-passed');
+      var suiteName = self.dataset.name;
+      var suitePassed = self.dataset.suitePassed;
       var suiteCode = self.code;
-      var numberOfTests = self.getAttribute('number-of-tests');
+      var numberOfTests = self.dataset.numberOfTests;
 
       var suite = self.shadowRoot.querySelector('.suite');
       var sc = self.shadowRoot.querySelector('.suite-code');
