fixes sample test `absolutePosition`
* sample/index.html (doctype): Add support for Standards mode instead of
  Quirks mode.
* (.box4): Force the box width (since font-size/rendering may differs).

--- a/sample/index.html
+++ b/sample/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <head>
   <title>Sample Tests</title>
   <meta name="udacity-grader" content="test.json" libraries="jsgrader" unit-tests="unit-tests.js">
@@ -64,6 +65,8 @@
     }
     .box4 {
       position: absolute;
+      /* Not all user-agents will make it 8px wide (font) */
+      width: 8px;
       left: calc(100% - 8px);
       /*bottom: 0;*/
     }
